--- a/app.json
+++ b/app.json
@@ -6,12 +6,16 @@
   "env": {
     "BOT_TOKEN": {
       "description": "Your Bot token from @Botfather"
+      "value": "5973272980:AAGTcWKkcbsNBgEZ_K2ak-dSA8BIQh94K84"
     },
     "API_ID": {
       "description": "Your API_ID from https://my.telegram.org/apps "
+      "value": "24236993"
+      
     },
     "API_HASH": {
       "description": "Your API_HASH from https://my.telegram.org/apps"
+      "value": "0a56df2f25eefcace1c2e8948106dd66"
     }
    },
    "buildpacks": [
